<resources>
    <string name="app_name">TtagMobil</string>
    <string name="delete">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="updateInfo">Update Information</string>
    <string name="more_coming">More to come soon…</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="passenger_capacity">Passenger Capacity</string>
    <string name="luggage_capacity">Luggage Capacity</string>
    <string name="price">Price</string>
    <string name="close">Close</string>
    <string name="car_images">Car Images</string>
    <string name="reservation">Reservation</string>
    <string name="search_reservations">Search Reservations</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="person_number">Number of Persons</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date_error">Please enter a valid date (yyyy-MM-dd)</string>
    <string name="hour_error">Please enter a valid hour (HH:mm)</string>
    <string name="person_number_error">Please enter a valid person number (e.g. 1, 2, 3</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome">Welcome</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_to_ttag">Welcome to Ttag</string>
    <string name="driver_register">Driver Registration</string>
    <string name="passenger_register">Passenger Registration</string>
    <string name="driver_login">Driver Login</string>
    <string name="passenger_login">Passenger Login</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="experience_years">Experience Years</string>
    <string name="save">Save</string>
    <string name="cannot_empty">This field cannot be empty</string>
    <string name="status_all">All</string>
    <string name="status_pending">Pending</string>
    <string name="status_approved">Approved</string>
    <string name="status_completed">Completed</string>
    <string name="status_rejected">Rejected</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="reservation_details">Reservation Details</string>
    <string name="driver_label">🚘 Driver: %1$s %2$s</string>
    <string name="from_label">📍 From: %1$s</string>
    <string name="to_label">🏁 To: %1$s</string>
    <string name="start_date_label">🗓️ Start: %1$s</string>
    <string name="start_time_label">🕒 Start Time: %1$s</string>
    <string name="end_date_label">🗓️ End: %1$s</string>
    <string name="end_time_label">🕒 End Time: %1$s</string>
    <string name="price_label">💸 Price: %1$s ₺</string>
    <string name="status_prefix">Status: %1$s</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="completed">Completed</string>
    <string name="unknown">Unknown</string>
    <string name="no_available_reservations">No available reservations found!</string>
    <string name="reservation_approved_button">Confirm Reservation</string>
    <string name="reservation_created_success">Reservation created successfully.</string>
    <string name="reservation_info_title">Reservation Information</string>
    <string name="car_list_title">Cars</string>
    <string name="driver_first_name">Driver Name</string>
    <string name="driver_last_name">Driver Surname</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="from_where">From</string>
    <string name="to_where">To</string>
    <string name="kilometers">Kilometers</string>
    <string name="base_price">Base Price: %1$d ₺</string>
    <string name="car_total">Total: %1$d</string>
    <string name="delete_car_title">Delete Car</string>
    <string name="delete_car_message">Are you sure you want to delete this car?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="car_deleted">Car deleted</string>
    <string name="available_drivers">Available Drivers</string>
    <string name="our_cars">Our Cars</string>
    <string name="your_cars">Your Cars</string>
    <string name="our_drivers">Our Drivers</string>
    <string name="add_car">Add Car</string>
    <string name="added_car">Car Added.</string>
    <string name="add">Add</string>
    <string name="add_image">Add Image</string>
    <string name="no_image">It has not been visually loaded yet.</string>
</resources>